tests/policies/disallow-host-namespaces/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
- name: tenant-a
  labels:
    tenancy.io/tenant: "true"
